--- a/tool.html
+++ b/tool.html
@@ -40,6 +40,6 @@
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="core.js"></script>
-	<script src="engine.js"></script>
+	<script src="tool.js"></script>
 </body>
 </html>
