--- a/tool.html
+++ b/tool.html
@@ -9,31 +9,43 @@
 	<link rel="apple-touch-icon-precomposed" href="img/57x57.png"/>
 	<style>
 		body {
-		color:#fff;
-		background-color:#000;
-		-webkit-touch-callout:none;
-		-webkit-tap-highlight-color:rgba(0,0,0,0);
-		-webkit-text-size-adjust:none;
-		-webkit-user-select:none;
+			color:#fff;
+			background-color:#000;
+			-webkit-touch-callout:none;
+			-webkit-tap-highlight-color:rgba(0,0,0,0);
+			-webkit-text-size-adjust:none;
+			-webkit-user-select:none;
 		}
 
 		#mainCanvas {
-		position	: absolute;
-		top		: 0px;
-		left	: 0px;
-		z-index	: 0;
+			position	: absolute;
+			top		: 0px;
+			left	: 0px;
+			z-index	: 0;
 		}
 
 		canvas, img {
-		image-rendering: optimizeSpeed;
-		image-rendering: -moz-crisp-edges;
-		image-rendering: -webkit-optimize-contrast;
-		image-rendering: optimize-contrast;
-		-ms-interpolation-mode: nearest-neighbor;
+			image-rendering: optimizeSpeed;
+			image-rendering: -moz-crisp-edges;
+			image-rendering: -webkit-optimize-contrast;
+			image-rendering: optimize-contrast;
+			-ms-interpolation-mode: nearest-neighbor;
 		}
 	</style>
 </head>
-<body bgcolor="#000000">
+<body>
+	<input type="NUMBER" placeholder = 'filename' id="inpFilename"/><button id='inpLoad'>load</button><button id='inpSave'>save</button><br/>
+	<input type="NUMBER" placeholder = 'reskey' id="inpResKey"/>
+	<input type="NUMBER" placeholder = 'mapWidth' id="inpMapWidth"/>
+	<input type="NUMBER" placeholder = 'mapHeight' id="inpMapHeight"/>
+
+	<br/>
+	camera[
+	<span id="spanCameraX">camerax</span> ,
+	<span id="spanCameraY">cameray</span> 
+	]
+	<br/>
+
 	<div id="game">
 		<canvas id='mainCanvas'></canvas>	
 		<canvas id='backCanvas'></canvas>
