--- a/tool.html
+++ b/tool.html
@@ -46,11 +46,10 @@
 	</style>
 </head>
 <body>
-	<input type="TEXT" placeholder = 'filename' id="inpFilename"/><button id='btnLoad'>load</button><button id='btnSave'>save</button><br/>
-	<input type="NUMBER" placeholder = 'mapWidth' id="inpMapWidth"/>
-	<input type="NUMBER" placeholder = 'mapHeight' id="inpMapHeight"/>
-	<input type="NUMBER" placeholder = 'tileWidth' id="inpMapWidth"		value = '32'>
-	<input type="NUMBER" placeholder = 'tileHeight' id="inpMapHeight"	value = '32'>
+	<input type="TEXT" placeholder = 'filename' id="inpFilename" value="map_001.js"/><button id='btnLoad'>load</button><button id='btnSave'>save</button><br/>
+	<input type="NUMBER" placeholder = 'mapWidth' id="inpMapWidth"		value = '100' />
+	<input type="NUMBER" placeholder = 'mapHeight' id="inpMapHeight"	value = '100' />
+	<input type="NUMBER" placeholder = 'tileSize' id="inpTileSize"		value = '32'>
 
 	<br/>
 		<input type="TEXT" placeholder = 'TileAResKey' id="inpTileAResKey">
