--- a/tool.html
+++ b/tool.html
@@ -49,10 +49,12 @@
 	<input type="TEXT" placeholder = 'filename' id="inpFilename" value="map_001.js"/><button id='btnLoad'>load</button><button id='btnSave'>save</button><br/>
 	<input type="NUMBER" placeholder = 'mapWidth' id="inpMapWidth"		value = '100' />
 	<input type="NUMBER" placeholder = 'mapHeight' id="inpMapHeight"	value = '100' />
+	<button id='btnResize'>resize</button>
 	<input type="NUMBER" placeholder = 'tileSize' id="inpTileSize"		value = '32'>
 
 	<br/>
 		<input type="TEXT" placeholder = 'TileAResKey' id="inpTileAResKey">
+		<input type="TEXT" placeholder = 'TileBResKey' id="inpTileBResKey">
 	<br/>
 	camera[
 	<span id="spanCameraX">camerax</span> ,
