--- a/tool.html
+++ b/tool.html
@@ -51,21 +51,20 @@
 	<input type="NUMBER" placeholder = 'mapHeight' id="inpMapHeight"	value = '100' />
 	<button id='btnResize'>resize</button>
 	<input type="NUMBER" placeholder = 'tileSize' id="inpTileSize"		value = '32'>
+	<button id='btnResize'>resize</button>
 
 	<br/>
 		<input type="TEXT" placeholder = 'TileAResKey' id="inpTileAResKey">
 		<input type="TEXT" placeholder = 'TileBResKey' id="inpTileBResKey">
 	<br/>
-	camera[
-	<span id="spanCameraX">camerax</span> ,
-	<span id="spanCameraY">cameray</span> 
-	]
-	<br/>
+	camera[ <span id="spanCameraX">camerax</span> , <span id="spanCameraY">cameray</span> ] <br/>
+	cursor world [ <span id="spanCursorX">cursorx</span> , <span id="spanCursorY">cursory</span> ] <br/>
 
 	<div id="divLeftTileSet">
-		<div id="divTileA" class="divTileArea">
-			<img id = "imgTile_0" class="imgTileArea" src=""></img>
-		</div>
+		<button class = 'btnTileSet' data-idx='0'>ground tile</button>
+		<button class = 'btnTileSet' data-idx='1'>wall tile</button>
+		<div id="divTileA" class="divTileArea"> <img id = "imgTile_0" class="imgTileArea" src=""></img> </div>
+		<div style="display:none" id="divTileB" class="divTileArea"> <img id = "imgTile_1" class="imgTileArea" src=""></img> </div>
 	</div>
 
 	<div id="game">
