레이어2 추가

--- a/tool.html
+++ b/tool.html
@@ -63,8 +63,8 @@
 	<div id="divLeftTileSet">
 		<button class = 'btnTileSet' data-idx='0'>ground tile</button>
 		<button class = 'btnTileSet' data-idx='1'>wall tile</button>
-		<div id="divTileA" class="divTileArea"> <img id = "imgTile_0" class="imgTileArea" src=""></img> </div>
-		<div style="display:none" id="divTileB" class="divTileArea"> <img id = "imgTile_1" class="imgTileArea" src=""></img> </div>
+		<div data-idx='0' id="divTileA" class="divTileArea"> <img id = "imgTile_0" class="imgTileArea" src=""></img> </div>
+		<div data-idx='1' style="display:none" id="divTileB" class="divTileArea"> <img id = "imgTile_1" class="imgTileArea" src=""></img> </div>
 	</div>
 
 	<div id="game">
